test/tests/compiler/15_arrays_and_pointer_arithmetic/valid/libraries/return_pointer_to_array.plx
#  given a nested array of longs, return a pointer to one row in the array
pub fn return_row(arr: *[3][4]i64, idx: i32) *[4]i64 {
    return arr[idx]
}
